# zenith

./: LICENSE
bootstrap/: .gitignore  AUTHORS  Makefile.am  README  configure.ac  test.sh
bootstrap/src/: Makefile.am  entry.c  entry.h  interpreter.c  interpreter.h  lex.c  lex.h  main.c  main.h  parser.c  parser.h  reader.c  reader.h  stack.c  stack.h  syscall.c  syscall.h
bootstrap/src/syscall/independent/: 1.c  3.c  4.c
bootstrap/test/: Makefile.am
bootstrap/test/arithmetic/: Makefile.am  arithmetic.zen  main.c
bootstrap/test/functions/: Makefile.am  functions.zen  main.c
bootstrap/test/greeter/: Makefile.am  greeter.zen  main.c
bootstrap/test/hello-world/: Makefile.am  hello-world.zen  main.c
bootstrap/test/lib/: Makefile.am  streams.c  streams.h  tap.c  tap.h
bootstrap/test/unit-lex/: Makefile.am  main.c
bootstrap/test/unit-lex-between/: Makefile.am  main.c
bootstrap/test/unit-lex-line/: Makefile.am  main.c
bootstrap/test/unit-read-line/: Makefile.am  main.c
test/: .gitignore  test.sh
test/hello-world/: main.zen
